gitignore directories and files

--- a/0x03-queuing_system_in_js/.gitignore
+++ b/0x03-queuing_system_in_js/.gitignore
@@ -9,3 +9,6 @@ redis-7.2.3
 
 # Ignore the redis-7.2.3.tar.gz.1 file
 redis-7.2.3.tar.gz.1
+
+# Ignore the redis-7.2.3.tar.gz file
+redis-7.2.3.tar.gz
